infra/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: roda
  labels:
    name: roda
    environment: production
