infra/k8s/mfe-customers.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mfe-customers
  namespace: roda
  labels:
    app: mfe-customers
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mfe-customers
  template:
    metadata:
      labels:
        app: mfe-customers
        version: v1
    spec:
      containers:
      - name: mfe-customers
        image: mini-roda/mfe-customers:v1.0.0
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 5173
          protocol: TCP
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"
        livenessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: mfe-customers
  namespace: roda
  labels:
    app: mfe-customers
spec:
  type: ClusterIP
  ports:
  - port: 5173
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: mfe-customers
